--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <header>
             <h1>Buyer's Market</h1>
+            <button onclick="location.href='/index.html'">Home</button>
             <button onclick="location.href='/html/form.html'">Make a Post</button>
             <button onclick="location.href='/html/board.html'">View Current Posts</button>
             <button onclick="location.href='/html/notifications_form.html'">Get Notified</button>
