Kelly add global style.css, css files for future, HTML nav and css links

--- a/html/about.html
+++ b/html/about.html
@@ -15,9 +15,8 @@
     <!-- GLOBAL CSS -->
     <link rel="stylesheet" href="../css/style.css" />
 
-    <!-- PAGE-SPECIFIC CSS Needs to be re-routed?-->
-    <link rel="stylesheet" href="../css/form.css" />
-    <!--Needs to be re-routed?-->
+    <!-- PAGE-SPECIFIC CSS -->
+    <link rel="stylesheet" href="../css/about.css" />
   </head>
   <body>
     <header>
