--- a/html/board.html
+++ b/html/board.html
@@ -1,34 +1,62 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="author" content="Anna Fagan, Catherine Hawley, Kelly Daniel">
-        <title>Buyer's Market</title>
-    </head>
-    <body>
-        <main>
-            <h1>Buyer's Market Posting Board</h1>
-            <p>Please enter city to display posts from that city.</p>
-            <form>
-                <label for="cityName">City</label><br>
-                <input type="text" id="cityName" name="cityName" required><br>
-                <input type="button" onclick="getCity()" value="submit">
-            </form>
-        </main>
-        <script>
-            // Create a function for the button
-            function getCity(){
-                // get the field where the user inputed the city name
-                const cityNameField= document.getElementById('cityName');
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      name="author"
+      content="Anna Fagan, Catherine Hawley, Kelly Daniel, Lizbeth Garcia"
+    />
+    <title>Buyer's Market</title>
+    <!-- GLOBAL CSS -->
+    <link rel="stylesheet" href="../css/style.css" />
 
-                // Assign the value of the field to a variable
-                const cityName = cityNameField.value;
+    <!-- PAGE-SPECIFIC CSS -->
+    <link rel="stylesheet" href="../css/board.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Buyer's Market Posting Board</h1>
+    </header>
+    <!-- ==== GLOBAL NAVIGATION ==== -->
+    <nav>
+      <a href="../index.html">Home</a>
+      <a href="post_form.html">Create a Post</a>
+      <a href="board.html">Post Board</a>
+      <a href="notifications_form">Get Notifications</a>
+      <a href="about.html">About Us</a>
+    </nav>
 
-                // ensure that the city is case sensitive
-                return cityName.toLowerCase();
-            }
-        </script>
-    </body>
+    <main class="container board-container">
+      <p>Please enter city to display posts from that city.</p>
+      <form>
+        <label for="cityName">City</label><br />
+        <input type="text" id="cityName" name="cityName" required /><br />
+        <input type="button" onclick="getCity()" value="submit" />
+      </form>
+    </main>
+
+    <!-- ==== GLOBAL FOOTER ==== -->
+    <footer>
+      <p>Four Functioneers — Bellevue College Project</p>
+    </footer>
+
+    <script>
+      // Create a function for the button
+      function getCity() {
+        // get the field where the user inputed the city name
+        const cityNameField = document.getElementById("cityName");
+
+        // Assign the value of the field to a variable
+        const cityName = cityNameField.value;
+
+        // ensure that the city is case sensitive
+        return cityName.toLowerCase();
+      }
+    </script>
+  </body>
 </html>
