--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-    <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="author" content="Anna Fagan, Catherine Hawley, Kelly Daniel">
-        <title>Buyer's Market</title>
-    </head>
-    <body>
-        <h1>Buyer's Market</h1>
-    </body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta
+      name="author"
+      content="Anna Fagan, Catherine Hawley, Kelly Daniel, Lizbeth Garcia"
+    />
+    <title>Buyer's Market</title>
+    <!-- GLOBAL CSS -->
+    <link rel="stylesheet" href="../css/style.css" />
+
+    <!-- PAGE-SPECIFIC CSS -->
+    <link rel="stylesheet" href="../css/home.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Buyer's Market Posting Board</h1>
+    </header>
+    <!-- ==== GLOBAL NAVIGATION ==== -->
+    <nav>
+      <a href="../index.html">Home</a>
+      <a href="post_form.html">Create a Post</a>
+      <a href="board.html">Post Board</a>
+      <a href="notifications_form">Get Notifications</a>
+      <a href="about.html">About Us</a>
+    </nav>
+  </body>
 </html>
