--- a/html/post-item.html
+++ b/html/post-item.html
@@ -31,5 +31,108 @@
       <a href="notifications_form">Get Notifications</a>
       <a href="about.html">About Us</a>
     </nav>
+
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Form</title>
+    <link rel="stylesheet" href="./css/styles.css">
+
+</head>
+<body>
+    <form action="results.html" method="GET">
+        <label for="fname">First Name</label>
+        <input type="text" name="fname" id="fname" placeholder="First Name" required>
+
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" placeholder="Email" required>
+
+        <!-- <label for="age">Age</label>
+        <input type="number" name="age" id="age" min="13" max="139" step="2" placeholder="Enter Age" required> -->
+
+
+<!-- <div>
+    <label for="phoneNumber">Phone</label>
+    <input type="tel" name="phoneNumber" id="phoneNumber">
+</div> -->
+
+<div>
+    Category:
+    <div>
+        <label>
+            Home furnishings
+            <input type="checkbox" name="Home" id="Home">
+        </label>
+    </div>
+    <div>
+        <label>
+            Art supplies
+            <input type="checkbox" name="Art" id="Art">
+        </label>
+    </div>
+</div>
+
+<!-- <div>
+    <label>
+        User Name
+        <input type="text" name="username" id="username" placeholder="Username" required>
+    </label>
+</div> -->
+<!-- <div>
+    <p>Do you prefer Nighttime or Daytime?</p>
+    <label for="night">Night</label>
+    <input type="radio" name="timePreference" id="night" value="Night">
+
+    <label for="day">Day</label>
+    <input type="radio" name="timePreference" id="day" value="Day">
+</div> -->
+
+<!-- <div>
+    <label for="faveDay">Favorite Weekday</label>
+    <select name="faveDay" id="faveDay">
+        <option value="Monday">Monday</option>
+        <option value="Tuesday">Tuesday</option>
+        <option value="Wednesday">Wednesday</option>
+        <option value="Thursday">Thursday</option>
+        <option value="Friday">Friday</option>
+        <option value="Saturday">Saturday</option>
+        <option value="Sunday">Sunday</option>
+    </select>
+</div> -->
+
+<!-- <div>
+    <label for="password">Password</label>
+    <input type="password" name="password" id="password" required>
+</div> -->
+
+<div>
+    <label for="description">Item description</label>
+    <textarea name="description" id="description"></textarea>
+</div>
+
+<form>
+    <label for="webUrl">URL</label>
+    <input type="url" name="webUrl" id="webUrl">
+
+    <label for="favcolor">Favorite Color</label>
+    <input type="color" name="favcolor" id="favcolor">
+
+    <input type="hidden" name="sessionId" id="sessionId" value="SecretRandomNumberUsedtoManageTheSession">
+
+    <button type="reset">Reset</button>
+    <button type="submit">Submit</button>
+</form>
+
+<form action="results.html" method="GET" enctype="multipart/form-data">
+    <input type="file" name="fileUpload" id="fileUpload">
+</form>
+
+
+    </form>
+</body>
+</html>
+
   </body>
 </html>
