comment out unneeded sections

--- a/html/post-item.html
+++ b/html/post-item.html
@@ -49,6 +49,14 @@
         <label for="email">Email</label>
         <input type="email" name="email" id="email" placeholder="Email" required>
 
+        <label for="item">Item </label>
+        <input type="item" name="item" id="item" placeholder="Item name" required>
+
+        <div>
+    <label for="description">Item description</label>
+    <textarea name="description" id="description"></textarea>
+</div>
+
         <!-- <label for="age">Age</label>
         <input type="number" name="age" id="age" min="13" max="139" step="2" placeholder="Enter Age" required> -->
 
@@ -107,19 +115,16 @@
     <input type="password" name="password" id="password" required>
 </div> -->
 
-<div>
-    <label for="description">Item description</label>
-    <textarea name="description" id="description"></textarea>
-</div>
+
 
 <form>
-    <label for="webUrl">URL</label>
+    <!-- <label for="webUrl">URL</label>
     <input type="url" name="webUrl" id="webUrl">
 
     <label for="favcolor">Favorite Color</label>
     <input type="color" name="favcolor" id="favcolor">
 
-    <input type="hidden" name="sessionId" id="sessionId" value="SecretRandomNumberUsedtoManageTheSession">
+    <input type="hidden" name="sessionId" id="sessionId" value="SecretRandomNumberUsedtoManageTheSession"> -->
 
     <button type="reset">Reset</button>
     <button type="submit">Submit</button>
