--- a/html/notify-form.html
+++ b/html/notify-form.html
@@ -1,35 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-      name="author"
-      content="Anna Fagan, Catherine Hawley, Kelly Daniel, Lizbeth Garcia"
-    />
-    <title>Buyer's Market</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Four Functioneers" />
+    <title>Buyer’s Market | Get Notifications</title>
+
     <!-- GLOBAL CSS -->
     <link rel="stylesheet" href="../css/style.css" />
-
-    <!-- PAGE-SPECIFIC CSS Needs to be re-routed?-->
-    <link rel="stylesheet" href="../css/form.css" />
-    <!--Needs to be re-routed?-->
   </head>
+
   <body>
     <header>
-      <h1>Buyer's Market Posting Board</h1>
+      <h1>Get Notifications</h1>
+      <p class="tagline">Sign up to be notified when new items are posted.</p>
     </header>
-    <!-- ==== GLOBAL NAVIGATION ==== -->
+
+    <!-- === NAVIGATION === -->
     <nav>
       <a href="../index.html">Home</a>
-      <a href="post_form.html">Create a Post</a>
-      <a href="board.html">Post Board</a>
-      <a href="notifications_form">Get Notifications</a>
-      <a href="about.html">About Us</a>
+      <a href="./post-item.html">Create a Post</a>
+      <a href="./listings.html">Listings</a>
+      <a href="./notify-form.html">Get Notifications</a>
+      <a href="./about.html">About Us</a>
     </nav>
+
+    <!-- === MAIN CONTENT === -->
+    <main class="notify-container">
+      <h2>Stay Updated</h2>
+      <p>Enter your email and choose at least one category to follow.</p>
+
+      <form>
+        <label for="email">Email (required)</label>
+        <input
+          type="email"
+          id="email"
+          name="email"
+          placeholder="you@example.com"
+          required
+        />
+
+        <label>Categories (choose one or more)</label>
+
+        <div class="notify-categories">
+          <label
+            ><input type="checkbox" name="cat" value="Home Decor" /> Home
+            Decor</label
+          >
+          <label
+            ><input type="checkbox" name="cat" value="Office Supplies" /> Office
+            Supplies</label
+          >
+          <label
+            ><input type="checkbox" name="cat" value="Packing Materials" />
+            Packing Materials</label
+          >
+        </div>
+
+        <button type="submit" class="btn">Sign Me Up</button>
+
+        <div class="success-message" id="success">
+          Thank you! Your preferences have been saved.
+        </div>
+      </form>
+    </main>
+
+    <footer>
+      <p>© 2025 Buyer’s Market — Four Functioneers</p>
+    </footer>
   </body>
 </html>
