--- a/index.html
+++ b/index.html
@@ -1,34 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
-    <meta
-      name="author"
-      content="Anna Fagan, Catherine Hawley, Kelly Daniel, Lizbeth Garcia"
-    />
-    <title>Buyer's Market</title>
-    <!-- GLOBAL CSS -->
-    <link rel="stylesheet" href="../css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="author" content="Four Functioneers" />
+    <title>Buyer’s Market | Home</title>
 
-    <!-- PAGE-SPECIFIC CSS -->
-    <link rel="stylesheet" href="../css/home.css" />
+    <!-- GLOBAL CSS -->
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
+
   <body>
     <header>
-      <h1>Buyer's Market Posting Board</h1>
+      <h1>Buyer’s Market</h1>
+      <p class="tagline">
+        A simple way to give and receive goods in your community.
+      </p>
     </header>
-    <!-- ==== GLOBAL NAVIGATION ==== -->
+
+    <!-- === NAVIGATION === -->
     <nav>
-      <a href="../index.html">Home</a>
-      <a href="/post_form.html">Create a Post</a>
-      <a href="/board.html">Post Board</a>
-      <a href="/notifications_form">Get Notifications</a>
-      <a href="/about.html">About Us</a>
+      <a href="index.html">Home</a>
+      <a href="./html/post-item.html">Create a Post</a>
+      <a href="./html/listings.html">Listings</a>
+      <a href="./html/notify-form.html">Get Notifications</a>
+      <a href="./html/about.html">About Us</a>
     </nav>
+
+    <!-- === MAIN CONTENT === -->
+    <main class="container home-sections">
+      <section class="intro">
+        <h2>Welcome to Buyer’s Market</h2>
+        <p>
+          Post items you want to give away, browse what others have posted, or
+          receive alerts for new items. It’s simple, quick, and
+          community-focused.
+        </p>
+      </section>
+
+      <section class="card-grid">
+        <a class="card" href="./html/post-item.html">
+          <h3>Create a Post</h3>
+          <p>Share something you want to give away.</p>
+        </a>
+
+        <a class="card" href="./html/listings.html">
+          <h3>Browse Listings</h3>
+          <p>See what’s available in your area.</p>
+        </a>
+
+        <a class="card" href="./html/notify-form.html">
+          <h3>Get Notifications</h3>
+          <p>Sign up for alerts when new items are posted.</p>
+        </a>
+      </section>
+    </main>
+
+    <footer>
+      <p>© 2025 Buyer’s Market — Four Functioneers</p>
+    </footer>
   </body>
 </html>
