add placeholdeer price field

--- a/html/post-item.html
+++ b/html/post-item.html
@@ -108,6 +108,9 @@ div {
         <label for="item">Item </label>
         <input type="item" name="item" id="item" placeholder="Item name" required>
 
+        <label for="item">Price </label>
+        <input type="price" name="price" id="item" placeholder="Enter 'free' or amount under  $20' " required>
+
         <div>
     <label for="description">Item description</label>
     <textarea name="description" id="description" placeholder="Describe your item"></textarea>
