--- a/html/post-item.html
+++ b/html/post-item.html
@@ -19,7 +19,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: Verdana, sans-serif;
 }
 
 /* Body styling */
@@ -37,6 +37,7 @@ form {
     padding: 20px 30px;
     border-radius: 8px;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    font-family: Verdana, sans-serif;
 }
 
 /* Labels and inputs */
@@ -92,9 +93,8 @@ div {
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
       <a href="../index.html">Home</a>
-      <a href="post_form.html">Create a Post</a>
-      <a href="board.html">Post Board</a>
-      <a href="notifications_form">Get Notifications</a>
+      <a href="listings.html">See Listings</a>
+      <a href="notify-form.html">Get Notifications</a>
       <a href="about.html">About Us</a>
     </nav>
 
@@ -109,7 +109,7 @@ div {
         <input type="item" name="item" id="item" placeholder="Item name" required>
 
         <label for="item">Price </label>
-        <input type="price" name="price" id="item" placeholder="Enter 'free' or amount under  $20' " required>
+        <input type="price" name="price" id="item" placeholder="Enter 'free' or amount under $20" required>
 
         <div>
     <label for="description">Item description</label>
