update submit button

--- a/html/post-item.html
+++ b/html/post-item.html
@@ -146,7 +146,7 @@ div {
     <input type="hidden" name="sessionId" id="sessionId" value="SecretRandomNumberUsedtoManageTheSession"> -->
 
     <button type="reset">Reset</button>
-    <button type="submit">Submit</button>
+     <button type="submit" class="btn">Create My Listing</button>
 </form>
 
 <form action="results.html" method="GET" enctype="multipart/form-data">
@@ -154,7 +154,7 @@ div {
 </form>
 
 
-    </form>
+   
  <script>
     document.addEventListener("DOMContentLoaded", () => {
         const form = document.querySelector("form");
