add back placeholder text

--- a/html/post-item.html
+++ b/html/post-item.html
@@ -100,16 +100,16 @@ div {
 
    <form id="listingForm">
   <label for="firstName">First Name</label>
-  <input type="text" name="firstName" id="firstName" required>
+  <input type="text" name="firstName" id="firstName" placeholder="First Name" required>
 
   <label for="email">Email</label>
-  <input type="email" name="email" id="email" required>
+  <input type="email" name="email" id="email" placeholder="Email"required>
 
   <label for="item">Item</label>
-  <input type="text" name="item" id="item" required>
+  <input type="text" name="item" id="item" placeholder="Item label"required>
 
   <label for="price">Price</label>
-  <input type="text" name="price" id="price" required>
+  <input type="text" name="price" id="price" placeholder="Enter 'free' or an amount less than $20"required>
 
   <label for="description">Item Description</label>
   <textarea name="description" id="description"></textarea>
