--- a/html/about.html
+++ b/html/about.html
@@ -24,15 +24,11 @@
     </header>
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
-      <a href="../index.html">Home</a>
-
-      <a href="../html/post_form.html">Create a Post</a>
-
-      <a href="post_form.html">Create a Post</a>
-
-      <a href="board.html">Post Board</a>
-      <a href="notifications_form">Get Notifications</a>
-      <a href="about.html">About Us</a>
+      <a href="index.html">Home</a>
+      <a href="./html/post-item.html">Create a Post</a>
+      <a href="./html/listings.html">Listings</a>
+      <a href="./html/notify-form.html">Get Notifications</a>
+      <a href="./html/about.html">About Us</a>
     </nav>
      <style>
 
