Update navigation links in about.html

--- a/html/about.html
+++ b/html/about.html
@@ -24,12 +24,13 @@
     </header>
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
-      <a href="index.html">Home</a>
-      <a href="./html/post-item.html">Create a Post</a>
-      <a href="./html/listings.html">Listings</a>
-      <a href="./html/notify-form.html">Get Notifications</a>
-      <a href="./html/about.html">About Us</a>
+      <a href="../index.html">Home</a>
+      <a href="./post-item.html">Create a Post</a>
+      <a href="./listings.html">Listings</a>
+      <a href="./notify-form.html">Get Notifications</a>
+      <a href="./about.html">About Us</a>
     </nav>
+
      <style>
 
         h2 {
