Update navigation links in about.html

--- a/html/about.html
+++ b/html/about.html
@@ -23,17 +23,14 @@
       <h1>About Us</h1>
     </header>
     <!-- ==== GLOBAL NAVIGATION ==== -->
-    <nav>
+   <nav>
       <a href="../index.html">Home</a>
-
-      <a href="../html/post_form.html">Create a Post</a>
-
-      <a href="post_form.html">Create a Post</a>
-
-      <a href="board.html">Post Board</a>
-      <a href="notifications_form">Get Notifications</a>
-      <a href="about.html">About Us</a>
+      <a href="./post-item.html">Create a Post</a>
+      <a href="./listings.html">Listings</a>
+      <a href="./notify-form.html">Get Notifications</a>
+      <a href="./about.html">About Us</a>
     </nav>
+
      <style>
 
         h2 {
