added styles to home page, changed a few colors, fixed nav

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
 
-  <body>
+  <body class="home-bg">
     <header>
       <h1>Buyer’s Market</h1>
       <p class="tagline">
@@ -26,6 +26,15 @@
       <a href="./html/notify-form.html">Get Notifications</a>
       <a href="./html/about.html">About Us</a>
     </nav>
+
+    <!-- Hero -->
+
+    <div class="hero">
+      <div class="hero-overlay">
+        <h1>A Place Where Every Item Finds a New Home</h1>
+        <p>Your community marketplace for free & low-cost items.</p>
+      </div>
+    </div>
 
     <!-- === MAIN CONTENT === -->
     <main class="container home-sections">
