--- a/html/about.html
+++ b/html/about.html
@@ -49,43 +49,46 @@
       <a href="./notify-form.html">Get Notifications</a>
       <a href="./about.html">About Us</a>
     </nav>
+    <main class="containerl">
+      <div class="">
+        <h2>Our Mission</h2>
+        <div class="paragraph-box">
+          Our mission is to make it easier for people to give their items a
+          second life whether by selling them at an affordable price or donating
+          them to someone who truly needs them. We aim to create a simple,
+          friendly website where communities can connect, share resources, and
+          reduce waste together.
+        </div>
 
-    <div class="">
-      <h2>Our Mission</h2>
-      <div class="paragraph-box">
-        Our mission is to make it easier for people to give their items a second
-        life whether by selling them at an affordable price or donating them to
-        someone who truly needs them. We aim to create a simple, friendly
-        website where communities can connect, share resources, and reduce waste
-        together.
+        <h2>The Problem We're Solving</h2>
+        <div class="paragraph-box">
+          Every day, perfectly usable items are thrown away simply because
+          people don't have a convenient way to pass them on. Meanwhile, many
+          individuals struggle to find affordable essentials. Our website
+          bridges this gap by offering a place where people can sell unwanted
+          items or donate them with ease. By making reuse simple and accessible,
+          we help reduce waste, save money, and support local communities.
+        </div>
+
+        <h2>Our Values</h2>
+        <ul class="paragraph-box">
+          <li>
+            <strong>Sustainability</strong> – Giving items a second life and
+            reducing waste.
+          </li>
+          <li>
+            <strong>Community</strong> – Bringing people together through
+            sharing.
+          </li>
+          <li><strong>Accessibility</strong> – Easy for anyone to use.</li>
+          <li>
+            <strong>Responsibility</strong> – Encouraging thoughtful and
+            conscious reuse.
+          </li>
+        </ul>
       </div>
+    </main>
 
-      <h2>The Problem We're Solving</h2>
-      <div class="paragraph-box">
-        Every day, perfectly usable items are thrown away simply because people
-        don't have a convenient way to pass them on. Meanwhile, many individuals
-        struggle to find affordable essentials. Our website bridges this gap by
-        offering a place where people can sell unwanted items or donate them
-        with ease. By making reuse simple and accessible, we help reduce waste,
-        save money, and support local communities.
-      </div>
-
-      <h2>Our Values</h2>
-      <ul class="paragraph-box">
-        <li>
-          <strong>Sustainability</strong> – Giving items a second life and
-          reducing waste.
-        </li>
-        <li>
-          <strong>Community</strong> – Bringing people together through sharing.
-        </li>
-        <li><strong>Accessibility</strong> – Easy for anyone to use.</li>
-        <li>
-          <strong>Responsibility</strong> – Encouraging thoughtful and conscious
-          reuse.
-        </li>
-      </ul>
-    </div>
     <footer>
       <p>© 2025 Buyer’s Market — Four Functioneers</p>
       <p>Team: Catherine Hawley, Anna Fagan, Kelly Daniel, Lizbeth Garcia</p>
