--- a/html/post-item.html
+++ b/html/post-item.html
@@ -92,67 +92,68 @@
       <a href="about.html">About Us</a>
     </nav>
 
-    <!--Similar to notify-form-->
-    <form id="listingForm">
-      <label for="firstName">First Name</label>
-      <input
-        type="text"
-        name="firstName"
-        id="firstName"
-        placeholder="First Name"
-        required
-      />
+    <main>
+      <!--Similar to notify-form-->
+      <form id="listingForm">
+        <label for="firstName">First Name</label>
+        <input
+          type="text"
+          name="firstName"
+          id="firstName"
+          placeholder="First Name"
+          required
+        />
 
-      <label for="email">Email</label>
-      <input
-        type="email"
-        name="email"
-        id="email"
-        placeholder="Email"
-        required
-      />
+        <label for="email">Email</label>
+        <input
+          type="email"
+          name="email"
+          id="email"
+          placeholder="Email"
+          required
+        />
 
-      <label for="item">Item</label>
-      <input
-        type="text"
-        name="item"
-        id="item"
-        placeholder="Item label"
-        required
-      />
+        <label for="item">Item</label>
+        <input
+          type="text"
+          name="item"
+          id="item"
+          placeholder="Item label"
+          required
+        />
 
-      <label for="price">Price</label>
-      <input
-        type="text"
-        name="price"
-        id="price"
-        placeholder="Enter 'free' or an amount less than $20"
-        required
-      />
+        <label for="price">Price</label>
+        <input
+          type="text"
+          name="price"
+          id="price"
+          placeholder="Enter 'free' or an amount less than $20"
+          required
+        />
 
-      <label for="description">Item Description</label>
-      <textarea name="description" id="description"></textarea>
+        <label for="description">Item Description</label>
+        <textarea name="description" id="description"></textarea>
 
-      <p><strong>Category (choose at least one):</strong></p>
+        <p><strong>Category (choose at least one):</strong></p>
 
-      <label>
-        <input type="checkbox" name="cat" value="Home" />
-        Home furnishings
-      </label>
+        <label>
+          <input type="checkbox" name="cat" value="Home" />
+          Home furnishings
+        </label>
 
-      <label>
-        <input type="checkbox" name="cat" value="Art" />
-        Art supplies
-      </label>
+        <label>
+          <input type="checkbox" name="cat" value="Art" />
+          Art supplies
+        </label>
 
-      <p class="category-error-message" style="color: red; display: none">
-        Please check at least one category.
-      </p>
+        <p class="category-error-message" style="color: red; display: none">
+          Please check at least one category.
+        </p>
 
-      <button type="reset">Reset</button>
-      <button type="submit">Create My Listing</button>
-    </form>
-
+        <button type="reset">Reset</button>
+        <button type="submit">Create My Listing</button>
+      </form>
+    </main>
     <footer>
       <p>© 2025 Buyer’s Market — Four Functioneers</p>
       <p>Team: Catherine Hawley, Anna Fagan, Kelly Daniel, Lizbeth Garcia</p>
