add listing form checkboxes

--- a/html/post-item.html
+++ b/html/post-item.html
@@ -136,14 +136,30 @@
 
         <p><strong>Category (choose at least one):</strong></p>
 
+       <label>
+          <input type="checkbox" name="cat" value="Art" />
+          Arts & Crafts
+        </label>
+
+         <label>
+          <input type="checkbox" name="cat" value="Decor" />
+          Home Decor
+        </label>
+        
         <label>
           <input type="checkbox" name="cat" value="Home" />
-          Home furnishings
+          Home Furnishings
+        </label>
+
+  
+         <label>
+          <input type="checkbox" name="cat" value="Office" />
+          Office Supplies
         </label>
 
         <label>
-          <input type="checkbox" name="cat" value="Art" />
-          Art supplies
+          <input type="checkbox" name="cat" value="Packing" />
+          Packing Materials
         </label>
 
         <p class="category-error-message" style="color: red; display: none">
