updated styles for form and added nav button

--- a/html/listings.html
+++ b/html/listings.html
@@ -22,7 +22,7 @@
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
       <a href="../index.html">Home</a>
-      <a href="../html/post-form.html">Create a Post</a>
+      <a href="../html/post-item.html">Create a Post</a>
       <a href="../html/listings.html">Listings</a>
       <a href="../html/notify-form.html">Get Notifications</a>
       <a href="../html/about.html">About Us</a>
@@ -44,8 +44,8 @@
             <input type="checkbox" id="officeSuppliesCheck" name="office-supplies"/>
           </div>
           <div class="listing-categories">
-            <label for="packingSuppliesCheck">Packing Supplies</label>
-            <input type="checkbox" id="packingSuppliesCheck" name="packing-supplies"/>
+            <label for="packingMaterialsCheck">Packing Materials</label>
+            <input type="checkbox" id="packingMaterialsCheck" name="packing-materials"/>
           </div>
           <div class="listing-categories">
             <label for="artSuppliesCheck">Art Supplies</label>
