Save my changes before pull

--- a/html/listings.html
+++ b/html/listings.html
@@ -12,12 +12,36 @@
       content="Anna Fagan, Catherine Hawley, Kelly Daniel, Lizbeth Garcia"
     />
     <title>Buyer's Market</title>
+
+    <!-- GOOGLE FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
     <!-- GLOBAL CSS -->
     <link rel="stylesheet" href="../css/style.css" />
   </head>
+  <!-- === ACTIVE NAV STATE (auto-highlight current page) === -->
   <body class="listings-page">
+    <!-- GLOBAL HEADER -->
     <header>
-      <h1>Buyer's Market Posting Board</h1>
+      <div class="header-inner">
+        <a href="../index.html">
+          <img
+            src="../images/Logo-Img-Green.png"
+            alt="Buyer's Market Logo"
+            class="site-logo"
+          />
+        </a>
+
+        <h1 class="site-title">
+          Browse
+          <span class="divider">|</span>
+          <span class="sub-secondary">Items ready for a new home</span>
+        </h1>
+      </div>
     </header>
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
