--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@
   </head>
 
   <body class="home-page">
+    <!-- GLOBAL HEADER -->
     <header>
-      <h1>Home | Buyer’s Market</h1>
-      <p class="tagline">
-        A simple way to give and receive goods in your community.
-      </p>
+      <div class="header-inner">
+        <a href="index.html">
+          <img
+            src="./images/Logo-Img-Green.png"
+            alt="Buyer's Market Logo"
+            class="site-logo"
+          />
+        </a>
+
+        <h1 class="site-title">
+          Buyer’s Market
+          <span class="divider">|</span>
+          <span class="sub-secondary"> Sharing made simple </span>
+        </h1>
+      </div>
     </header>
 
     <!-- === NAVIGATION === -->
@@ -37,9 +49,7 @@
 
     <div class="hero">
       <div class="hero-overlay">
-        <div class="hero-text-container">
-          <h1>A Place Where Every Item Finds a New Home</h1>
-        </div>
+        <h1>A Place Where Every Item Finds a New Home</h1>
       </div>
     </div>
 
@@ -71,7 +81,7 @@
         </a>
       </section>
     </main>
-
+    <!-- ==== GLOBAL FOOTER ==== -->
     <footer>
       <p>© 2025 Buyer’s Market — Four Functioneers</p>
       <p>Team: Catherine Hawley, Anna Fagan, Kelly Daniel, Lizbeth Garcia</p>
