--- a/html/about.html
+++ b/html/about.html
@@ -12,7 +12,13 @@
       content="Anna Fagan, Catherine Hawley, Kelly Daniel, Lizbeth Garcia"
     />
     <title>Buyer's Market</title>
-
+    <!-- GOOGLE FONTS-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
     <!-- GLOBAL CSS -->
     <link rel="stylesheet" href="../css/style.css" />
 
@@ -23,7 +29,7 @@
         color: #222;
       }
       body {
-        font-family: Verdana, sans-serif;
+        /*font-family: Verdana, sans-serif;*/
         color: black;
         background: #f8f8f8;
       }
@@ -36,9 +42,25 @@
       }
     </style>
   </head>
+  <!-- === ACTIVE NAV STATE (auto-highlight current page) === -->
   <body class="about-page">
+    <!-- GLOBAL HEADER -->
     <header>
-      <h1>About Us</h1>
+      <div class="header-inner">
+        <a href="../index.html">
+          <img
+            src="../images/Logo-Img-Green.png"
+            alt="Buyer's Market Logo"
+            class="site-logo"
+          />
+        </a>
+
+        <h1 class="site-title">
+          About
+          <span class="divider">|</span>
+          <span class="sub-secondary">The value of simple local sharing</span>
+        </h1>
+      </div>
     </header>
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
@@ -87,7 +109,7 @@
         </ul>
       </div>
     </main>
-
+    <!-- ==== GLOBAL FOOTER ==== -->
     <footer>
       <p>© 2025 Buyer’s Market — Four Functioneers</p>
       <p>Team: Catherine Hawley, Anna Fagan, Kelly Daniel, Lizbeth Garcia</p>
