--- a/html/notify-confirmation.html
+++ b/html/notify-confirmation.html
@@ -6,20 +6,34 @@
     <meta name="author" content="Four Functioneers" />
     <title>Confirmation Receipt</title>
 
-    <!-- GLOBAL CSS -->
-    <link rel="stylesheet" href="../css/style.css" />
+    <!-- GOOGLE FONTS-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
       rel="stylesheet"
     />
+    <!-- GLOBAL CSS -->
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
-
+  <!-- === ACTIVE NAV STATE (auto-highlight current page) === -->
   <body class="notify-page">
     <header>
-      <h1>Alerts Created!</h1>
-      <!-- <p class="tagline">Your notification preferences have been saved.</p> -->
+      <div class="header-inner">
+        <a href="../index.html">
+          <img
+            src="../images/Logo-Img-Green.png"
+            alt="Buyer's Market Logo"
+            class="site-logo"
+          />
+        </a>
+
+        <h1 class="site-title">
+          Confirmation
+          <span class="divider">|</span>
+          <span class="sub-secondary">Successfully Created Alerts</span>
+        </h1>
+      </div>
     </header>
 
     <!-- === GLOBAL NAVIGATION === -->
@@ -32,7 +46,7 @@
     </nav>
 
     <main class="notify-container">
-      <h2>Confirmation Receipt</h2>
+      <h2>You Did It!</h2>
       <p>You will now receive alerts based on the preferences below.</p>
 
       <div class="confirm-card">
@@ -55,7 +69,7 @@
         Return to Alerts Page
       </a>
     </main>
-
+    <!-- ==== GLOBAL FOOTER ==== -->
     <footer>
       <p>© 2025 Buyer’s Market — Four Functioneers</p>
       <p>Team: Catherine Hawley, Anna Fagan, Kelly Daniel, Lizbeth Garcia</p>
