Fix duplicate 'box-shadow' property in CSS

--- a/html/about.html
+++ b/html/about.html
@@ -32,7 +32,7 @@
         padding: 20px;
         line-height: 1.6;
         border-radius: 20px;
-        box-shadow: box-shadow: 10px 10px 5px #aaaaaa;
+        box-shadow: 10px 10px 5px #aaaaaa;
         max-width: 700px;     
         margin: 20px auto;
       }
