changed list order and changed about page shadow

--- a/html/about.html
+++ b/html/about.html
@@ -29,19 +29,14 @@
         color: #222;
       }
 
-      /* THIS IS OVERIDING GLOBAL AND CAN BE SAFELY REMOVED */
-      /* body {
-        font-family: Verdana, sans-serif;
-        color: black;
-        background: #f8f8f8;
-      } */
       .paragraph-box {
         background: white;
         padding: 20px;
         line-height: 1.6;
         border-radius: 20px;
-        box-shadow: 10px 10px;
+        box-shadow: 10px 10px rgba(0, 0, 0, 0.08);
       }
+      
     </style>
   </head>
   <!-- === ACTIVE NAV STATE (auto-highlight current page) === -->
