--- a/html/post-item.html
+++ b/html/post-item.html
@@ -58,44 +58,12 @@
         border-radius: 4px;
       }
 
-      /* ==== Not needed, inherits global styles from css, safe to delete ====
-      button {
-        padding: 10px 20px;
-        margin-right: 10px;
-        border: none;
-        border-radius: 4px;
-        background-color: #d9d0c1;
-        color: black;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
+      h2{
+        text-align: center;
       }
-
-      .create-listing-button{
-        padding: 10px 20px;
-        margin-right: 10px;
-        border: none;
-        border-radius: 4px;
-        background-color: #99d98c;
-        color: black;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
+      p{
+        text-align: center;
       }
-
-      button:hover {
-        background-color: #005fa3;
-      } */
-
-      /* Checkbox and radio layout */
-      /* input[type="checkbox"],
-      input[type="radio"] {
-        width: auto;
-        margin-right: 10px;
-      } */
-
-      /* Section spacing */
-      /* div {
-        margin-bottom: 20px;
-      } */
     </style>
   </head>
 
@@ -131,6 +99,10 @@
     <main>
       <!--Similar to notify-form-->
       <form id="listingForm">
+        <h2>Give us the Details</h2>
+        <p>
+          Fill out the following form to post your item to our website.
+        </p>
         <label for="itemPhoto">Upload a Photo of Your Item</label>
         <input type="file" name="itemPhoto" id="itemPhoto" required />
 
