Updated Post page container + button spacing and colors

--- a/html/notify-form.html
+++ b/html/notify-form.html
@@ -57,12 +57,12 @@
       <form>
         <!-- “First Name” field  (required) -->
 
-        <label for="firstName">First Name (required)</label>
+        <label for="firstName">Your Name (required)</label>
         <input
           type="text"
           id="firstName"
           name="firstName"
-          placeholder="Your first name"
+          placeholder="Your Name"
           required
         />
 
