--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </a>
 
         <a class="card" href="./html/notify-form.html">
-          <h3>Get Notifications</h3>
+          <h3>Get Alerts</h3>
           <p>Sign up for alerts when new items are posted.</p>
         </a>
       </section>
