fixed validation errors

--- a/html/notify-form.html
+++ b/html/notify-form.html
@@ -117,10 +117,9 @@
 
         <!-- “Notification Frequency” dropdown -->
 
+        <label for="frequency">Alert Frequency (required)</label>
+
         <select id="frequency" name="frequency" required>
-          <small class="frequency-help">
-            How often would you like to receive updates?
-          </small>
           <option value="" disabled selected>Select frequency</option>
 
           <option
@@ -144,7 +143,6 @@
             Weekly Summary
           </option>
         </select>
-
         <!-- Consent checkbox (“I agree to receive notifications”) -->
 
         <label class="consent-label">
